# profiling-daemon

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  ptrace.cpp  report.py  test_program.cpp
integration/: integration-test.py
nokia/: fzm.cmake
src/: event_loop.hpp  fifo.hpp  main.cpp  options.hpp  output.hpp  perf.hpp  proc.hpp  proc_maps.hpp  utils.hpp
tests/: main.cpp  proc_maps_tests.cpp
